--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Aziz Shamim's Git Achievements <img src='http://www.gravatar.com/avatar/e7e0385c2168e773d80fdccb2b8dd4b8'/></h2>
-Unlocked       18/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 186 points<br>
+Unlocked       18/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 189 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -34,6 +34,7 @@ Unlocked       18/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Investigator (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Locksmith (Level 1)</div>  <div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
+<li><div class="title">Apprentice Locksmith (Level 2)</div>  <div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 2)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 3)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -68,25 +69,25 @@ Unlocked       18/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-4176 branch
- 253 status
- 121 add
-  90 checkout
-  60 commit
-  49 diff
-  44 rebase
-  40 push
-  32 fetch
-  16 stash
-  16 log
-  10 remote
+4843 branch
+ 289 status
+ 137 add
+  95 checkout
+  87 commit
+  60 push
+  54 rebase
+  53 diff
+  36 fetch
+  20 submodule
+  17 stash
+  17 log
+  15 remote
    9 achievements
    7 config
-   4 gc
+   5 gc
    4 blame
    3 rm
    3 mv
-   2 submodule
    2 reset
    2 help
    1 revert
