--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Aziz Shamim's Git Achievements <img src='http://www.gravatar.com/avatar/e7e0385c2168e773d80fdccb2b8dd4b8'/></h2>
-Unlocked       18/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 219 points<br>
+Unlocked       18/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 225 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -71,19 +71,20 @@ Unlocked       18/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 <li><div class="title">Thug (Level 4)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
+<li><div class="title">Thug (Level 5)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-5240 branch
- 314 status
- 148 add
- 139 commit
- 112 push
+5277 branch
+ 315 status
+ 149 add
+ 147 commit
+ 119 push
  102 checkout
   66 rebase
-  54 diff
+  60 diff
   40 fetch
-  31 log
+  32 log
   20 submodule
   17 stash
   15 remote
